Fixing wrong font-weight

--- a/production/style.css
+++ b/production/style.css
@@ -611,7 +611,7 @@ sjwc-lesson-content-item pre code {
         display: block;
         margin: 14px 0;
         color: inherit;
-        font-weight: 500px;
+        font-weight: 500;
       }
 
       h2 {
